[tool.poetry]
name = "zktree_export"
version = "0.1.0"
description = ""
authors = ["Adarah <lucasyharada@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
orjson = "^2.6.3"
kazoo = "^2.7.0"
loguru = "^0.4.1"
gevent = "^1.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
